--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ name                     : &name "Pratik Nag"
 description              : &description "Research Fellow @UOW"
 url                      : https://pratiknag.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "pratik187/pangchung.github.io"
+repository               : "pratiknag/pratiknag.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -95,7 +95,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "pratik187"
+  github           : "pratiknag"
   google_plus      :
   keybase          :
   instagram        :
