--- a/_config.yml
+++ b/_config.yml
@@ -83,11 +83,11 @@ author:
   name             : "Pratik Nag"
   avatar           : "profile3.jpeg"
   bio              : "Research Fellow in Statistics"
-  location         : 
-  employer         : 
+  location         : "Wollongong,Australia"
+  employer         : "University of Wollongong"
   googlescholar    : "https://scholar.google.com/citations?user=rMB6VwYAAAAJ&hl=en"
   email            : "pnag[at]uow[dot]edu[dot]au"
-  #researchgate     :  "https://www.researchgate.net/profile/yourprofile"
+  researchgate     :  "https://www.researchgate.net/profile/Pratik-Nag-2"
 #  uri            : "https://cemse.kaust.edu.sa/extstat/people/person/peng-zhong"
   bitbucket        :
   codepen          :
@@ -101,7 +101,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : 
+  linkedin         : "pratik-nag-stats"
   orcid            : "https://orcid.org/0000-0001-5065-5273"
   pinterest        :
   soundcloud       :
