--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Pratik Nag"
-  avatar           : "profile3.jpeg"
+  avatar           : "website_profile.jpeg"
   bio              : "Research Fellow in Statistics"
   location         : "Wollongong,Australia"
   employer         : "University of Wollongong"
