--- a/_config.yml
+++ b/_config.yml
@@ -195,7 +195,7 @@ defaults:
       path: ""
       type: posts
     values:
-      layout: single
+      layout: splash
       author_profile: true
       read_time: true
       comments: true
@@ -206,7 +206,7 @@ defaults:
       path: ""
       type: pages
     values:
-      layout: single
+      layout: splash
       author_profile: true
   # _teaching
   - scope:
