--- a/_config.yml
+++ b/_config.yml
@@ -206,7 +206,7 @@ defaults:
       path: ""
       type: pages
     values:
-      layout: splash
+      layout: single
       author_profile: true
   # _teaching
   - scope:
