--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   location         : "Wollongong,Australia"
   employer         : "University of Wollongong"
   googlescholar    : "https://scholar.google.com/citations?user=rMB6VwYAAAAJ&hl=en"
-  email            : "pnag[at]uow[dot]edu[dot]au"
+  email            : "pnag@uow.edu.au"
   researchgate     :  "https://www.researchgate.net/profile/Pratik-Nag-2"
 #  uri            : "https://cemse.kaust.edu.sa/extstat/people/person/peng-zhong"
   bitbucket        :
