--- a/_config.yml
+++ b/_config.yml
@@ -98,7 +98,7 @@ author:
   github           : "pratiknag"
   google_plus      :
   keybase          :
-  instagram        :
+  instagram        : "pratiknag20"
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         : "pratik-nag-stats"
