--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ author:
   stackoverflow    : 
   steam            :
   tumblr           :
-  twitter          : 
+  twitter          : "PratikNag_stats"
   vine             :
   weibo            :
   xing             :
