--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,7 +18,7 @@ main:
   #   url: /portfolio/
         
  - title: "Blog Posts"
-   url: /posts/
+    url: /year-archive/
     
   - title: "CV"
     url: /files/Academic_CV.pdf
