--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,8 +17,8 @@ main:
   # - title: "Portfolio"
   #   url: /portfolio/
         
- - title: "Blog Posts"
-    url: /posts/
+ # - title: "Blog Posts"
+ #    url: /posts/
     
   - title: "CV"
     url: /files/Academic_CV.pdf
