--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,11 +17,11 @@ main:
   # - title: "Portfolio"
   #   url: /portfolio/
         
- # - title: "Blog Posts"
- #    url: /posts/
+ - title: "Blog Posts"
+    url: /posts/
     
-  - title: "CV"
-    url: /files/Academic_CV.pdf
+  # - title: "CV"
+  #   url: /files/Academic_CV.pdf
     
   # - title: "Guide"
   #   url: /markdown/
